# ChangeLog for media-libs/libgpod
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libgpod/ChangeLog,v 1.70 2010/04/07 14:46:24 tester Exp $

*libgpod-0.7.93 (07 Apr 2010)

  07 Apr 2010; Olivier Crête <tester@gentoo.org> +libgpod-0.7.93.ebuild,
  metadata.xml:
  Version bump, bug #311093

  08 Dec 2009; Jeroen Roovers <jer@gentoo.org> libgpod-0.7.2.ebuild:
  Stable for HPPA (bug #289703).

  27 Sep 2009; Brent Baude <ranger@gentoo.org> libgpod-0.7.2.ebuild:
  stable ppc64, bug 271496

  01 Jul 2009; Jeroen Roovers <jer@gentoo.org> libgpod-0.7.2.ebuild:
  Marked ~hppa (bug #274984).

  02 Jun 2009; Raúl Porcel <armin76@gentoo.org> libgpod-0.7.2.ebuild:
  sparc stable wrt #271496

  01 Jun 2009; Markus Meier <maekke@gentoo.org> libgpod-0.7.2.ebuild:
  x86 stable, bug #271496

  31 May 2009; Brent Baude <ranger@gentoo.org> libgpod-0.7.0.ebuild:
  stable ppc64, bug 271496

  31 May 2009; nixnut <nixnut@gentoo.org> libgpod-0.7.2.ebuild:
  ppc stable #271496

  29 May 2009; Olivier Crête <tester@gentoo.org> libgpod-0.7.2.ebuild:
  amd64 stable

  29 May 2009; Olivier Crête <tester@gentoo.org> libgpod-0.7.2.ebuild:
  amd64 stable

  25 May 2009; Christian Faulhammer <fauli@gentoo.org> libgpod-0.7.0.ebuild:
  stable x86, bug 271218

  28 Apr 2009; Olivier Crête <tester@gentoo.org>
  -files/libgpod-0.5.2-no-gdk.patch,
  +files/libgpod-0.7.2-compile-without-hal.patch, -libgpod-0.5.2.ebuild,
  libgpod-0.7.2.ebuild:
  Re-make hal optional, bug #267759

  26 Apr 2009; Olivier Crête <tester@gentoo.org> libgpod-0.7.2.ebuild:
  Add undocumented build-time dep on xsltproc

*libgpod-0.7.2 (26 Apr 2009)

  26 Apr 2009; Olivier Crête <tester@gentoo.org> metadata.xml,
  +libgpod-0.7.2.ebuild:
  Version bump, always require hal (it does not build without it), recommend
  GTK+ (for artwork support)

  29 Mar 2009; Olivier Crête <tester@gentoo.org> libgpod-0.7.0.ebuild: