@@ -5,13 +5,13 @@ AUX libgpod-0.7.2-compile-without-hal.patch 509 RMD160 8035f563bd5c884424d65eca5
 DIST libgpod-0.7.2.tar.gz 959142 RMD160 231b4efd49b8b36e5b644e804a2cd0958b1d3fbf SHA1 66c95cec9f8aba92f3472df7429e873d30d0bd79 SHA256 2e8f31fc37ed0c9c89004097fdb568e8971627e7aedfb57fb229399c0f490777
 DIST libgpod-0.7.93.tar.gz 943096 RMD160 b464e936615acd69f35d64e3a78c735feab23570 SHA1 e3a7c1ef0995dc07ac9370e3025d4c9cbd5facb2 SHA256 df935e9ea5db7c23187bbfe27827fb3dc539b62c0969d5bc09b800594b087e0a
 EBUILD libgpod-0.7.2.ebuild 1196 RMD160 d105bcbe39a22e4f686057aec97aa08771366da6 SHA1 85ba6c37a311e4fa382d0b79700e3d1bdb1fb007 SHA256 89772542898adf9a619ac023d46d409e87aa837e5ae0a04e32bb3c9739cf626c
-EBUILD libgpod-0.7.93.ebuild 1196 RMD160 abe2d57e00046b2702ee551db307f0befdba7af9 SHA1 930e097b2b48b2083c647ac87f8dc36a675e7622 SHA256 16dac9f81215ef1ffeee57fceb8d41f16479b5a193be64ed67076f388b5a4bb4
-MISC ChangeLog 8951 RMD160 c636bb94d0839c009e0734cc2c5cc0dbfb539d85 SHA1 02eb8d725edb131789908c3e3316cbe53e6e4cd9 SHA256 c380338383ff8bc7ecd5283313a0a78ef8580ec8e43a01a294cac63d473e2e40
+EBUILD libgpod-0.7.93.ebuild 1162 RMD160 5479c8b6a169ca0e8a2a560c6389b2e2608f8c23 SHA1 03ce4158dd2788a1537419aa1466db5d939916eb SHA256 03fb1ba32f4de6c680e0b15df46b9bc3895476535786d4fbe8e8e82bdf4b5212
+MISC ChangeLog 9056 RMD160 374d900251e0910bb7a73cf7afc150f436362d72 SHA1 11c03234bf64a3bdfe8172c9e319ed5e0c8fe7e5 SHA256 48d44bbbefd878cec1984408c018b0ac911f11c7cdb00185bee54fa805f541fb
 MISC metadata.xml 653 RMD160 8ef4ab7ce89f104bc526ad330812a4a22a123f35 SHA1 8b1393230c18bb017d645c36ca714a162593a705 SHA256 f84d1024768c1ee90f399597ac2d39a4a75292c356c7589b7f2aa84ecbbacde0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAku8mssACgkQmOfEJZHYOKd6+gCgqTN24NMtBgdUn3y98Cuwn5OB
-m6IAn124SJA63H+UV7mX9w+vrJRXi0nh
-=34qh
+iEYEARECAAYFAku8oi8ACgkQmOfEJZHYOKdXwACfU2AFnn81wPF8xLZCx9Hy4rIg
+F4kAoLliCwb1UYO/wliGST7cVhhob4PE
+=uOEC
 -----END PGP SIGNATURE-----
