@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libgpod/libgpod-0.7.93.ebuild,v 1.1 2010/04/07 14:46:24 tester Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libgpod/libgpod-0.7.93.ebuild,v 1.2 2010/04/07 15:17:55 tester Exp $
 
 EAPI=2
 inherit eutils
@@ -12,7 +12,7 @@ SRC_URI="mirror://sourceforge/gtkpod/${P}.tar.gz"
 LICENSE="LGPL-2"
 SLOT="0"
 KEYWORDS="~amd64"
-IUSE="+gtk python test +udev iphone"
+IUSE="+gtk python +udev iphone"
 
 RDEPEND=">=dev-libs/glib-2.16
 	sys-apps/sg3_utils
@@ -22,8 +22,7 @@ RDEPEND=">=dev-libs/glib-2.16
 	python? ( >=dev-lang/python-2.3
 		>=media-libs/mutagen-1.8
 		>=dev-python/pygobject-2.8 )
-	udev? ( sys-fs/udev )
-	test? ( media-libs/taglib )"
+	udev? ( sys-fs/udev )"
 DEPEND="${RDEPEND}
 	python? ( >=dev-lang/swig-1.3.24 )
 	iphone? ( app-pda/libimobiledevice )
