@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libgpod
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libgpod/ChangeLog,v 1.70 2010/04/07 14:46:24 tester Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libgpod/ChangeLog,v 1.71 2010/04/07 15:17:55 tester Exp $
+
+  07 Apr 2010; Olivier Crête <tester@gentoo.org> libgpod-0.7.93.ebuild:
+  Remove useless dep on taglib
 
 *libgpod-0.7.93 (07 Apr 2010)
 
